--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Pade Title</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -32,7 +32,6 @@
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">order service</button>
-        <!-- колір??????? -->
       </section>
     
     <!-- features-->
