--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="images\what-are-we-doing\monitor.jpg"
+              src="images/what-are-we-doing/monitor.jpg"
               alt="Monitor"
               width="360"
               height="300"
@@ -80,7 +80,7 @@
           </li>
           <li>
             <img
-              src="images\what-are-we-doing\mobile.jpg"
+              src="images/what-are-we-doing/mobile.jpg"
               alt="Mobile screen"
               width="360"
               height="300"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="images\what-are-we-doing\mobile-telephone.jpg"
+              src="images/what-are-we-doing/mobile-telephone.jpg"
               alt="Mobine telephone"
               width="360"
               height="300"
@@ -102,7 +102,7 @@
         <ul>
           <li>
             <img
-              src="images\our-team\mark-guerrero.jpg"
+              src="/images/our-team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="images\our-team\tom-ford.jpg"
+              src="images/our-team/tom-ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -122,7 +122,7 @@
           </li>
           <li>
             <img
-              src="images\our-team\camila-garsia.jpg"
+              src="images/our-team/camila-garsia.jpg"
               alt="Camila Garsia"
               width="264"
               height="260"
@@ -132,7 +132,7 @@
           </li>
           <li>
             <img
-              src="images\our-team\daniel-wilson.jpg"
+              src="images/our-team/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -148,7 +148,7 @@
       <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digitel
-        marketing & growth solutions.
+        marketing & &#38; growth solutions.
       </p>
     </footer>
   </body>
