--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digitel
-        marketing & &#38; growth solutions.
+        marketing &#38; growth solutions.
       </p>
     </footer>
   </body>
