--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Title</title>
   </head>
 
@@ -76,7 +76,7 @@
               alt="Monitor"
               width="360"
               height="300"
-            />
+            >
           </li>
           <li>
             <img
@@ -84,7 +84,7 @@
               alt="Mobile screen"
               width="360"
               height="300"
-            />
+            >
           </li>
           <li>
             <img
@@ -92,7 +92,7 @@
               alt="Mobine telephone"
               width="360"
               height="300"
-            />
+            >
           </li>
         </ul>
       </section>
@@ -106,7 +106,7 @@
               alt="Mark Guerrero"
               width="264"
               height="260"
-            />
+            >
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -116,7 +116,7 @@
               alt="Tom Ford"
               width="264"
               height="260"
-            />
+            >
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -126,7 +126,7 @@
               alt="Camila Garsia"
               width="264"
               height="260"
-            />
+            >
             <h3>Camila Garsia</h3>
             <p>Marketing</p>
           </li>
@@ -136,7 +136,7 @@
               alt="Daniel Wilson"
               width="264"
               height="260"
-            />
+              >
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
