--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <ul>
           <li>
             <img
-              src="/images/our-team/mark-guerrero.jpg"
+              src="./images/our-team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="images/our-team/tom-ford.jpg"
+              src="./images/our-team/tom-ford.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -122,7 +122,7 @@
           </li>
           <li>
             <img
-              src="images/our-team/camila-garsia.jpg"
+              src="./images/our-team/camila-garsia.jpg"
               alt="Camila Garsia"
               width="264"
               height="260"
@@ -132,7 +132,7 @@
           </li>
           <li>
             <img
-              src="images/our-team/daniel-wilson.jpg"
+              src="./images/our-team/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
