--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a href="/">WebStudio</a>
 
       <nav>
         <ul>
@@ -145,7 +145,7 @@
     </main>
     <!--footer  -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="/">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digitel
         marketing &#38; growth solutions.
