--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="/">WebStudio</a>
-
       <nav>
+        <a href="/">WebStudio</a>
         <ul>
           <li><a href=""> Studio</a></li>
           <li><a href=""> Portfolio</a></li>
@@ -21,7 +20,7 @@
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-        <li><a href="tell:+110001111111"></a>+11(000)111-11-11</li>
+        <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
       </ul>
     </header>
 
@@ -136,7 +135,7 @@
               alt="Daniel Wilson"
               width="264"
               height="260"
-              >
+            >
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
